--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,20 @@
 			<version>18.0</version>
 		</dependency>
 		<dependency>
+			<groupId>cc.mallet</groupId>
+			<artifactId>mallet</artifactId>
+			<version>2.0.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.opennlp</groupId>
 			<artifactId>opennlp-tools</artifactId>
-			<version>1.6.0</version>
+			<version>1.6.1-SNAPSHOT</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>kottmann.opennlp</groupId>
+			<artifactId>mallet-addon</artifactId>
+			<version>1.6.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
