--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>mallet-addon</artifactId>
 			<version>1.6.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>eus.ixa</groupId>
+			<artifactId>ixa-pipe-nerc</artifactId>
+			<version>1.5.4</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
